# Vulkan-Template

./: .gitignore  CMakeLists.txt  README.md
scripts/: setup.bat  setup.sh
src/: main.cpp
